--- a/website_deploy/styles.css
+++ b/website_deploy/styles.css
@@ -25,17 +25,14 @@ header {
 }
 
 .logo-container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
-    overflow: auto; /* Clearfix for float */
+    padding-left: 20px;
+    text-align: left;
 }
 
 .logo {
     max-width: 250px;
     height: auto;
-    float: left;
-    margin-right: 20px;
+    display: block;
 }
 
 /* Hero Carousel */
